samples/_failures_safe/1761731174_1c4c9a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77f9f4fd.c: In function ‘main’:
./samples/SAFE/__tmp_77f9f4fd.c:139:12: error: expected identifier or ‘(’ at end of input
  139 |     struct LogAnaly
      |            ^~~~~~~~
./samples/SAFE/__tmp_77f9f4fd.c:139:12: error: expected declaration or statement at end of input
